src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
@font-face {
  font-family: "Custom";
  src: url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
}

html {
  scroll-behavior: smooth;
  @apply bg-bgColor-dark;
}
@layer components {
  .top-styles {
    @apply text-gray-300 text-lg lg:text-xl font-semibold flex flex-col items-center justify-center my-20 px-4;
  }
  .btn-primary {
    @apply bg-brand-primary py-1.5 px-3 border-none hover:bg-brand-hoverDark
           text-white text-sm lg:text-lg inline-flex space-x-2 items-center rounded-md
           my-6 font-bold;
  }
  .card-section {
    @apply grid md:grid-cols-3 sm:grid-cols-1 gap-4 w-11/12;
  }
  .card {
    @apply bg-bgColor-cardDark text-gray-300 text-lg lg:text-xl font-semibold p-6 shadow-sm rounded-sm hover:bg-brand-hoverDark;
  }
  .tagline {
    @apply text-gray-100 text-center mb-4 tracking-widest font-extralight border-b-4 border-brand-accent;
  }
  .headline {
    @apply text-white text-center mb-6 font-bold;
  }
}

